--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 server.port=${PORT:8080}
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/banking_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=Hariom@6447
+spring.datasource.url=${postgresql://bankingdb_cqio_user:TdbMkCMLYeReoyqM7YEMtXCK0PnToUIY@dpg-d68ff13uibrs7391bn4g-a/bankingdb_cqio}
+spring.datasource.username=${bankingdb_cqio_user}
+spring.datasource.password=${TdbMkCMLYeReoyqM7YEMtXCK0PnToUIY}
 
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 
 
