Fixed datasource configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,12 @@
 server.port=${PORT:8080}
 
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
 
-spring.datasource.url=${postgresql://bankingdb_cqio_user:TdbMkCMLYeReoyqM7YEMtXCK0PnToUIY@dpg-d68ff13uibrs7391bn4g-a/bankingdb_cqio}
-spring.datasource.username=${bankingdb_cqio_user}
-spring.datasource.password=${TdbMkCMLYeReoyqM7YEMtXCK0PnToUIY}
-
-spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
 
 
 
