Update application.properties for Render DB connection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=${PORT:8080}
 
-spring.datasource.url=${postgresql://bankingdb_awrn_user:3RPcI7pRYg5haZTFv2H3zUJoRGMZ7rR4@dpg-d68h0c49c44c73fs7dmg-a:5432/bankingdb_awrn}
+spring.datasource.url=${jdbc:postgresql://dpg-d68h0c49c44c73fs7dmg-a:5432/bankingdb_awrn}
 spring.datasource.username=${bankingdb_awrn_user}
 spring.datasource.password=${3RPcI7pRYg5haZTFv2H3zUJoRGMZ7rR4}
 
